# boilerplates

./: LICENSE.md  README.md  package.json  pnpm-lock.yaml
drizzle/meta/: _journal.json
python/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  init.sh  pyproject.toml
python/.github/workflows/: ci.yml
python/alembic/: env.py
python/alembic/versions/: 2025-12-19_18-43-10_fdcc5f098c9b_posts.py  2025-12-19_19-15-38_36f8632add27_posts.py
python/src/my_project/: main.py
python/src/my_project/libs/: config.py  db_helper.py  db_models.py  logger.py
src/: routeTree.gen.ts
src/components/: Navigation.tsx  Profile.tsx  theme-toggle.tsx
src/components/layouts/: Header.tsx
src/lib/: auth.ts
src/routes/: __root.tsx  protected.tsx  signin.tsx  signup.tsx
src/services/: auth.api.ts
src/styles/: app.css
tanstack/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  biome.json  compose.dev.yaml  compose.yaml  lefthook.yml  package.json  pnpm-lock.yaml  vite.config.ts
tanstack/.cursor/rules/: api-server-functions.mdc  authentication-patterns.mdc  database-drizzle-patterns.mdc  development-tools.mdc  project-structure.mdc  react-typescript-patterns.mdc  routing-patterns.mdc  tanstack-query-patterns.mdc  validation-patterns.mdc
tanstack/.github/workflows/: linter.yaml
tanstack/drizzle/: 0001_posts.sql
tanstack/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
tanstack/public/locales/: en.json  fr.json
tanstack/src/: routeTree.gen.ts  router.tsx  server.ts  start.ts
tanstack/src/components/: DefaultCatchBoundary.tsx  LanguageToggle.tsx  Navigation.tsx  NotFound.tsx  Profile.tsx  theme-context.tsx  theme-provider.tsx  theme-toggle.tsx
tanstack/src/components/layouts/: Header.tsx  Sidebar.tsx
tanstack/src/db/: drizzle.ts  schema.ts
tanstack/src/lib/: i18n.ts  logger.ts  theme.ts
tanstack/src/lib/auth/: auth.ts  (+1 more)
tanstack/src/routes/: __root.tsx  index.tsx  signin.tsx  signup.tsx
tanstack/src/services/: auth.api.ts
tanstack/src/styles/: app.css
(+15 files in other folders)
