[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Example User", email = "example@example.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
my-project = "my_project.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_project"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.9",
]

[tool.inline-snapshot]
format-command="ruff check --fix-only --stdin-filename {filename} | ruff format --stdin-filename {filename}"

[tool.ruff.lint]
# Sort imports
extend-select = ["I"]